--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "buffer": "^6.0.3",
     "eslint": "^8.10.0",
     "parcel": "^2.12.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^1.7.2"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BloomInstituteOfTechnology/web-guided-project-components-2.git"
